<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/my_title"
            android:textSize="24sp" />

        <Button
            android:id="@+id/media_streamer"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:onClick="showToast"
            android:text="@string/media_streamer" />

        <Button
            android:id="@+id/super_duo1"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:onClick="showToast"
            android:text="@string/super_duo1" />

        <Button
            android:id="@+id/super_duo2"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:onClick="showToast"
            android:text="@string/super_duo2" />

        <Button
            android:id="@+id/ant_terminator"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:onClick="showToast"
            android:text="@string/ant_terminator" />

        <Button
            android:id="@+id/materialize"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button"
            android:onClick="showToast"
            android:text="@string/materialize" />

        <Button
            android:id="@+id/capstone"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#E53935"
            android:onClick="showToast"
            android:text="@string/capstone"
            android:textColor="#FFFFFF" />


    </LinearLayout>
</ScrollView>